@@ -12,3 +12,4 @@ because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
 * Improved work with package inferred systems. For examples, when fixed the
 automatic symbol rendering for case when documentation section and
 referenced objects are in different packages.
+* Allowed to reference objects using keywords.
